--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>com.3pillarglobal.labs</groupId>
   <artifactId>quartz-simpledb-jobstore</artifactId>
-  <version>0.0.1</version>
+  <version>1.0</version>
   <name>Quartz SimpleDB Job Store</name>
   <description>A Quartz job store implementation to persist job details and triggers to Amazon SimpleDB</description>
 
@@ -60,13 +60,6 @@
       <version>1.8.5</version>
       <scope>provided</scope>
     </dependency>
-    <!-- sl4j:jcl bridge, developer can continue to use jcl or exclude 
-         slf4j-jcl, add jcl-over-slf4j, slf4j:log4j / slf4j:logback bridge -->
-    <dependency>
-    	<groupId>org.slf4j</groupId>
-    	<artifactId>slf4j-jcl</artifactId>
-    	<version>1.6.0</version>
-    </dependency>
 
 		<dependency>
       <groupId>org.codehaus.jackson</groupId>
@@ -85,6 +78,12 @@
       <artifactId>junit</artifactId>
       <version>4.7</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.slf4j</groupId>
+    	<artifactId>slf4j-jcl</artifactId>
+    	<version>1.6.0</version>
+    	<scope>test</scope>
     </dependency>
     <dependency>
     	<groupId>log4j</groupId>
