--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>com.3pillarglobal.labs</groupId>
   <artifactId>quartz-simpledb-jobstore</artifactId>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
   <name>Quartz SimpleDB Job Store</name>
   <description>A Quartz job store implementation to persist job details and triggers to Amazon SimpleDB</description>
 
