--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>org.sonatype.oss</groupId>
-		<artifactId>oss-parent</artifactId>
-		<version>7</version>
-	</parent>
+  <parent>
+      <artifactId>root</artifactId>
+      <groupId>bbc.forge.maven.parents</groupId>
+      <version>2.0.17</version>
+  </parent>
 
-  <groupId>com.3pillarglobal.labs</groupId>
+  <groupId>uk.co.bbc.quartz-simpledb-jobstore</groupId>
   <artifactId>quartz-simpledb-jobstore</artifactId>
   <version>1.1-SNAPSHOT</version>
   <name>Quartz SimpleDB Job Store</name>
@@ -23,12 +23,11 @@
 		</license>
 	</licenses>
 
-	<scm>
-		<connection>scm:git:git://github.com/3pillarlabs/quartz-simpledb-jobstore.git</connection>
-		<developerConnection>scm:git:git@github.com:3pillarlabs/quartz-simpledb-jobstore.git</developerConnection>
-		<tag>releases/${project.version}</tag>
-		<url>https://github.com/3pillarlabs/quartz-simpledb-jobstore</url>
-	</scm>
+    <scm>
+        <connection>scm:git:file:///.</connection>
+        <developerConnection>scm:git:file:///.</developerConnection>
+        <url>https://github.com/BBC-PIPS/quartz-simpledb-jobstore</url>
+    </scm>
 
 	<developers>
 		<developer>
